resolution of issue #128

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1637,11 +1637,11 @@ For the purposes of this document, the following terms and definitions apply.
   \termdefinitionLight{Distributed Ontology, Model and Specification Language\synonym
   DOL}\index{\dolindex ! definition}{language for formalizing {libraries}\index{library} of \termref{OMS} and OMS networks\index{OMS network}, 
   whose syntax and semantics are specified in this \IS{}.}
-
-\begin{note}
- When viewed as an \termref{OMS language}, DOL has \termref{OMS} as its
-non-logical symbols\index{non-logical symbol}, and OMS mappings\index{OMS mapping} as its sentences\index{sentence}.
-\end{note}
+%
+% \begin{note}
+%  When viewed as an \termref{OMS language}, DOL has \termref{OMS} as its
+% non-logical symbols\index{non-logical symbol}, and OMS mappings\index{OMS mapping} as its sentences\index{sentence}.
+% \end{note}
 
 \red{
   \termdefinition{library}{collection of named \termref{OMS} and OMS networks\index{OMS network}, possibly written in different OMS languages\index{OMS language}, linked by named OMS mappings\index{OMS mapping}.}
