Capitalize more headings for #116

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1521,7 +1521,7 @@ CURIEs altogether.
 
 Any conforming serialization of an OMS language shall have a machine-processable description as detailed in \cref{c:conform:description}.
 
-\sclause{Machine-processable Description of Conforming Languages, Logics, and Serializations}\label{c:conform:description}
+\sclause{Machine-Processable Description of Conforming Languages, Logics, and Serializations}\label{c:conform:description}
 
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: When a parser processes a DOL OMS found somewhere, which refers to modules in OMS languages, or includes them verbatim, the parser needs to know what language to expect; further DOL-supporting software needs to know, e.g., what other DOL-conforming languages the module in the given OMS language can be translated to.  Therefore we require that all languages/logics/serializations that conform with DOL describe themselves in a machine-comprehensible way.
@@ -2072,7 +2072,7 @@ best possible (in the sense of a maximum set of logical consequences)
     See \cite{circ1}, \cite{circ2}.
   \end{note}
 
-\sclause{Mappings between OMS}
+\sclause{Mappings Between OMS}
 
    \termdefinitionLight{\termref{OMS mapping}\synonym link\subjectfield{OMS}}{relationship between two \termref{OMS}}
   
@@ -2749,7 +2749,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 %
 %These challenges can be illustrated by the following set of use cases:
 
-\section{Use Case Onto-1: Interoperability Between OWL and FOL ontologies}
+\section{Use Case Onto-1: Interoperability Between OWL and FOL Ontologies}
 
 In order to achieve interoperability, during ontology development it is often necessary to describe 
 concepts in a language more expressive than OWL.  Therefore, it is common practice to informally 
@@ -3382,7 +3382,7 @@ OMS mappings, OMS networks, and other DOL expressions is defined using model-the
 on top of institutions. 
 
 
-\section{DOL enables Expression of Logically Heterogeneous OMS and Literal Reuse of Existing OMS}
+\section{DOL Enables Expression of Logically Heterogeneous OMS and Literal Reuse of Existing OMS}
 DOL is a mechanism for expressing logically heterogeneous OMS. It can be used to combine sentences and structured OMS expressed in different conforming OMS languages
 and logics into single documents or modules. With DOL, sentences or structured OMS of previously existing OMS in
 conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g., for identifying the language of a sentence) are provided. 
@@ -6513,7 +6513,7 @@ pos=h,
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
 
-\infannex{Conformance of OWL 2 DL with DOL}\label{a:owl}
+\infannex{Conformance of OWL 2 DL With DOL}\label{a:owl}
 
 The semantic conformance of OWL 2 DL (as specified in \nisref{W3C/TR REC-owl2-syntax:2009}) with DOL
 is established in \cite{OntoGraph}.
