--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3335,11 +3335,14 @@ DOL's modularity and annotation constructs can either be embedded into existing 
 
 \section{DOL in the Metamodelling Hierarchy}
 
+DOL uses the metamodelling hierarchy known from model-driven engineering:
 $$\xymatrix{
+\Text{M4} &&&
+\Text{Set \& category theory}\ar@(ul,ur)^{\Text{specified in}} \restore \\
 \Text{M3} &
-\Text{MOF} &
-\Text{EBNF} &
-\Text{Institutions}
+\Text{MOF}\ar@(ul,ur)^{\Text{conforms to}} &
+\Text{EBNF}\ar@(ul,ur)^{\Text{conforms to}} &
+\Text{Institutions} \ar[u]^{\Text{specified in}}
 \\
 \Text{M2} &
 \Text{DOL metamodel} \ar[u]^{\Text{conforms to}} \ar[ur]_(0.3){\Text{conforms to}}&
@@ -3351,11 +3354,14 @@ $$\xymatrix{
 \Text{specific OMS}\ar[u]^{\Text{conforms to}}&\\
 }$$
 
-\ednote{State somewhere: A DOL theory is at level M1 in MDA speak, the same level as an UML
-diagram. Also a DOL OMS network, containing interpretations, alignments between OMS etc. is at
-level M1. The specification of DOL  lives at M2, like the UML specification. Both are written in
-MOF.}
-
+The syntax of a DOL conformant language can be written in MOF or EBNF,
+which are self-describing.  The semantics of a DOL conformant language
+is its presentation as an institution. Institutions themselves are
+specified in the language of set theory and category
+theory.\footnote{In the future, it may be possible to specify the
+  semantics of a DOL conformant language using a semantics-based
+  logical framework such as MMT. This would close the loop already at
+  M3 also for the semantics.}
 
 \section{Semantic Foundations of DOL}\label{sem-foundations}
 
