--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9060,7 +9060,7 @@ an XML and a JSON version for processing with tools.
 \sclause{APIs}\label{c:APIs}
 
 Both Hets and Ontohub/Modelhub/Spechub provide APIs for the interchange
-with other tools\footnote{See \url{https://github.com/spechub/hets/wiki} and \url{https://github.com/ontohub/ontohub/wiki/}.}. Ontohub/Modelhub/Spechub also provides an API for
+with other tools\footnote{See \url{https://github.com/spechub/Hets/wiki/RESTful-Interface} and \url{https://github.com/ontohub/ontohub/wiki/}.}. Ontohub/Modelhub/Spechub also provides an API for
 exchange with other instances, so that e.g.\ Ontohub and Modelhub
 can exchange information about available repositories and their OMS.
 
